# llama.cpp

./: .gitignore  CMakeLists.txt  ggml-quants.c  ggml.c  ggml.h  llama.cpp  note.md
examples/main/: main.cpp
rust_utils/: Cargo.toml  compare.sh  justfile  result.txt  run_all.sh  run_all_parallel.sh
rust_utils/crates/capi/: Cargo.toml  build.rs  cbindgen.toml  justfile  rust_utils.h
rust_utils/crates/capi/src/: lib.rs  quants.rs
rust_utils/crates/common/: Cargo.toml
rust_utils/crates/common/src/: lib.rs
rust_utils/crates/common/src/transform/: default_map.rs  minus_map.rs  mod.rs  shift_map.rs  sorted_map.rs
rust_utils/crates/common/src/translate/: mod.rs
rust_utils/crates/tools/: Cargo.toml
rust_utils/crates/tools/src/: default_map.rs  ignore.rs  lib.rs  real_sim.rs  shift_map.rs  shift_sort_map.rs  sorted_map.rs
rust_utils/crates/tools/src/maps/: default_map.rs  minus_map.rs  mod.rs  shift_map.rs  shift_sort_map.rs  sorted_map.rs
rust_utils/crates/tools/src/transform/: default_map.rs  minus_map.rs
rust_utils/crates/tools/src/translate/: mod.rs
rust_utils/src/: bigarray.rs  lib.rs  translate.rs
