[package]
name = "rust_utils"
version = "0.1.0"
edition = "2021"
# use static lib
[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]
[workspace.dependencies]
clap = "4.4.12"
clap_derive = "4.4.7"
[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }


[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.26.0"
[profile.release]
lto = true
opt-level = 3