
[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.dependencies]
clap = "4.4.12"
clap_derive = "4.4.7"
bincode = "1.3.3"
serde = "1.0.195"
serde_derive = "*"
serde-big-array = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cbindgen = "0.26.0"
itertools = "0.12.0"
rand = "0.8.5"
rayon = "1.8.0"
slugify = "0.1.0"
[profile.release]
lto = true
opt-level = 3
