[package]
name = "rust_utils_capi"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["staticlib","cdylib","rlib"]
# use static lib
[dependencies]
rust_utils = { path = "../.." }
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt","env-filter"] }
[build-dependencies]
cbindgen = "0.26.0"
