[package]
name = "rust_utils_capi"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
# use static lib
[dependencies]
rust_utils_common = { path = "../common" }
bincode = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde-big-array ={workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
[build-dependencies]
cbindgen = {workspace = true}
