[package]
name = "rust_utils_tools"
version = "0.1.0"
edition = "2021"
# use static lib
[dependencies]
rust_utils = { path = "../.." }
rust_utils_capi = { path = "../capi" }
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

clap = { workspace = true }
clap_derive = { workspace = true }
rayon = "1.8.0"

[profile.release]
lto = true
opt-level = 3