[package]
name = "rust_utils_tools"
version = "0.1.0"
edition = "2021"
# use static lib
[dependencies]
rust_utils_capi = { path = "../capi" }
rust_utils_common = { path = "../common" }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-big-array = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

clap = { workspace = true }
clap_derive = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
